CC-T311 spacing issue

--- a/src/app/modules/verification/components/2fa-verification/2fa-verification.component.scss
+++ b/src/app/modules/verification/components/2fa-verification/2fa-verification.component.scss
@@ -13,6 +13,7 @@
 
 .code-container {
   text-align: center;
+  margin-bottom: 1.25em;
 }
 
 .additional {
